<resources>
    <string name="app_name">Marketplace Connect</string>
    <string name="home_title">Marketplace Listings</string>
    <string name="search_hint">Search by title or description</string>
    <string name="search">Search</string>
    <string name="add_listing">Add Listing</string>
    <string name="edit_listing">Edit Listing</string>
    <string name="save_listing">Save Listing</string>
    <string name="update_listing">Update Listing</string>
    <string name="listing_updated">Listing updated successfully</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="listing_saved">Listing saved successfully</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_description_required">Description is required</string>
    <string name="error_price_invalid">Enter a valid price greater than 0</string>
    <string name="no_listings_found">No listings found. Add a listing to get started.</string>
    <string name="delete_listing">Delete listing</string>
    <string name="delete_listing_confirm_title">Delete listing?</string>
    <string name="delete_listing_confirm_message">This will permanently remove \"%1$s\".</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="listing_deleted">Listing deleted</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="listing_photo">Listing photo</string>
    <string name="camera_permission_required">Camera permission is required to take listing photos.</string>
    <string name="photo_capture_failed">Could not capture photo. Please try again.</string>
    <string name="photo_upload_failed">Could not upload photo. Please try again.</string>

    <string-array name="categories">
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Home</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>

    <string-array name="categories_with_all">
        <item>All</item>
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Home</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>

    <string-array name="sort_options">
        <item>Newest</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
    </string-array>
</resources>
